the white space at the bottome appeared again...trying to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    width: 100%;
+    height:100%;
 }
 
 
